syntax = "proto3";
option go_package = ".;types";

service Chat {
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc Chat (stream ChatMessage) returns (stream ChatMessage) {}
}

message HelloRequest {
    // 1 is Field Number. It must be unique in message, and used to identify fields in the message binary format.
    // read: https://developers.google.com/protocol-buffers/docs/overview#assigning_field_numbers
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message ChatMessage {
    string message = 1;
}